# distributed-commerce-platform

./: .env.example  .gitignore  README.md  docker-compose.infra.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/scripts/: init-dbs.sql
proto/: common.proto  inventory.proto  recommendation.proto
scripts/: scaffold-services.js
services/api-gateway/: Dockerfile  package.json
services/api-gateway/src/: app.module.ts  main.ts
services/cart-service/: Dockerfile  package.json
services/cart-service/src/: app.module.ts  main.ts
services/identity-service/: Dockerfile  package.json  tsconfig.json
services/identity-service/prisma/: schema.prisma
services/identity-service/src/: app.module.ts  main.ts
services/inventory-service/: Dockerfile  package.json
services/inventory-service/prisma/: schema.prisma
services/inventory-service/src/: app.module.ts  main.ts
services/notification-service/: Dockerfile  package.json
services/notification-service/prisma/: schema.prisma
services/order-service/: Dockerfile  package.json  tsconfig.json
services/order-service/src/: main.ts  (+1 more)
services/payment-service/: Dockerfile  package.json
services/product-catalog-service/: Dockerfile  package.json
services/recommendation-service/: Dockerfile  kafka_consumer.py  main.py  pyproject.toml
services/review-service/: Dockerfile  package.json
services/shipping-service/: Dockerfile  package.json  tsconfig.json
services/user-service/: Dockerfile  package.json
(+68 files in other folders)
