[tool.poetry]
name = "recommendation-service"
version = "1.0.0"
description = "AI/ML Recommendation Engine"
authors = ["Admin <admin@ecommerce.local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
numpy = "^1.26.1"
confluent-kafka = "^2.3.0"
psycopg2-binary = "^2.9.9"
grpcio = "^1.59.2"
grpcio-tools = "^1.59.2"
prometheus-client = "^0.18.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
